added class based borders

--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
     <div class="wrapper">
         <img src="img/css test.png" alt="reference image" id='reference-image'>
         <div class="overlay">
-            <div class="sun"></div>
+            <div class="sun el"></div>
             <div class="house-holder">
-                <div class="chimney"></div>
-                <div class="roof">
-                    <div class="round-window"></div>
+                <div class="chimney el"></div>
+                <div class="roof el-special">
+                    <div class="round-window el"></div>
                 </div>
-                <div class="house">
+                <div class="house el">
                     <div class="ferestre">
-                        <div class="fereastra"></div>
-                        <div class="fereastra four"></div>
+                        <div class="fereastra el"></div>
+                        <div class="fereastra four el"></div>
                     </div>
-                    <div class="usa"></div>
+                    <div class="usa el"></div>
                 </div>
             </div>
-            <div class="ground"></div>
-            <div class="tree"></div>
-            <div class="tree skinny"></div>
+            <div class="ground el"></div>
+            <div class="tree el"></div>
+            <div class="tree skinny el"></div>
         </div>
     </div>
     <script src="js/index.js"></script>
