--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -29,6 +30,15 @@
             <div class="tree el"></div>
             <div class="tree skinny el"></div>
         </div>
+    </div>
+    <div class="menu">
+        <div class='check_holder' data-title='Toggle borders visibility'>
+            <input type='checkbox' id='toggleBorders'/>
+            <label for='toggleBorders'>
+              <i class='far fa-check-square box_check'></i>
+              <i class='far fa-square box_uncheck'></i>
+            </label>
+          </div>
     </div>
     <script src="js/index.js"></script>
 </body>
