handled special border case for the roof

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="sun el"></div>
             <div class="house-holder">
                 <div class="chimney el"></div>
-                <div class="roof el-special">
+                <div class="roof">
                     <div class="round-window el"></div>
                 </div>
                 <div class="house el">
