added dynamic title to the checkbox after each state change

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
     </div>
     <div class="menu">
-        <div class='check_holder' data-title='Toggle borders visibility'>
+        <div class='check_holder' data-title='Show borders'>
             <input type='checkbox' id='toggleBorders'/>
             <label for='toggleBorders'>
               <i class='far fa-check-square box_check'></i>
